Fix #Download Anchor Link Scroll Position accounts for the banner so information doesn't get cut off

--- a/assets/css/gridcoin.css
+++ b/assets/css/gridcoin.css
@@ -18,6 +18,14 @@ body {
 .grc-bgcolor{
     background-color: #1A2632;
 }
+
+.anchor-adjust{
+    position: relative;
+    margin-top: -76px;
+    padding-top: 76px;
+/* adjusts any anchors to match with the banner. Similar to the one done with .doc-container h1-h6*/
+}
+
 .grcbtn {
     border-radius: 50rem;
     padding-left: 1rem !important;
@@ -376,7 +384,6 @@ body {
      margin: 0px auto 16px auto;
      /* 16px gives spacing on the bottom on mobile when collapsed*/
  }
-
  .docs-container h1, .docs-container h2, .docs-container h3, .docs-container h4, .docs-container h5, .docs-container h6{
     position: relative;
     margin-top: -76px;
